fix alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ nav a {
 
 .hero {
   max-width: 1200px;
-  margin: 150px 10% 0 10%;
+  margin: 150px auto 0 auto;
   display: block;
 }
 
@@ -75,19 +75,14 @@ nav a {
   margin: 0 0 60px 0;
 }
 
-.hero h1 span {
-  display: inline-block;
-}
-
 section:first-of-type {
   margin-top: 0;
 }
 
 .wrapper-main {
   vertical-align: bottom;
-  display: inline-block;
   max-width: 1200px;
-  margin: 20px 10%;
+  margin: 20px auto;
   line-height: 1.5;
 }
 
